Add Ollama image as thumbnail to Local AIs post

--- a/_posts/2025-10-28-local-ais.md
+++ b/_posts/2025-10-28-local-ais.md
@@ -3,6 +3,7 @@ layout: post
 title: "Local AIs with Ollama"
 date: 2025-10-28
 categories: ["Artificial Intelligence", "Local Development"]
+image: /assets/img/ollama.png
 ---
 
 Local AI models are revolutionizing how we interact with artificial intelligence. This devnote explores Ollama, a powerful tool for running AI models locally on your own PC. I'll cover everything you need to know about getting started with local AI development.
